// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSPill Docs site Snapshot 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    role="listbox"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <span
            className="slds-icon_container slds-icon-standard-account"
            title="Account"
          >
            <svg
              aria-hidden="true"
              className="slds-icon"
            >
              <use
                href="/assets/icons/standard-sprite/svg/symbols.svg#account"
              />
            </svg>
            
          </span>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <div>
            <span
              className="slds-avatar slds-avatar_circle slds-avatar_medium"
            >
              <img
                alt=""
                onError={[Function]}
                src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
                title="User avatar"
              />
            </span>
          </div>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-pill slds-pill_link slds-has-error"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <span
            title="Error"
          >
            <svg
              aria-hidden="true"
              className="slds-icon-text-error slds-icon slds-icon-text-default"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#warning"
              />
            </svg>
            
          </span>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        aria-selected="true"
        className="slds-pill slds-pill_bare"
        onKeyDown={[Function]}
        role="option"
        tabIndex="0"
      >
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Press delete or backspace to remove
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPill Icon, Avatar, Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded-medium"
  >
    <div
      className="slds-p-horizontal_medium"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <span
            className="slds-icon_container slds-icon-standard-account"
            title="Account"
          >
            <svg
              aria-hidden="true"
              className="slds-icon"
            >
              <use
                href="/assets/icons/standard-sprite/svg/symbols.svg#account"
              />
            </svg>
            
          </span>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-p-horizontal_medium"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <div>
            <span
              className="slds-avatar slds-avatar_circle slds-avatar_medium"
            >
              <img
                alt=""
                onError={[Function]}
                src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
                title="User avatar"
              />
            </span>
          </div>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-p-horizontal_medium"
    >
      <span
        className="slds-pill slds-pill_link slds-has-error"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          className="slds-pill__icon_container"
        >
          <span
            title="Error"
          >
            <svg
              aria-hidden="true"
              className="slds-icon-text-error slds-icon slds-icon-text-default"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#warning"
              />
            </svg>
            
          </span>
        </span>
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPill Linked, Unlinked, Truncated 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded-medium"
  >
    <div
      className="slds-p-horizontal_medium"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-p-horizontal_medium"
    >
      <span
        className="slds-pill slds-pill_link"
        onClick={null}
        onKeyDown={[Function]}
        role="button"
      >
        <a
          className="slds-pill__action"
          href="#"
          onClick={[Function]}
          title="Full pill label verbiage mirrored here"
        >
          <span
            className="slds-pill__label"
          >
            Pill Label
          </span>
        </a>
        <span
          className="slds-icon_container slds-pill__remove"
          onClick={[Function]}
          role="button"
          title="Remove"
        >
          <svg
            className="slds-icon slds-icon_x-small slds-icon-text-default"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Remove
          </span>
        </span>
      </span>
    </div>
    <div
      className="slds-p-horizontal_medium"
    >
      <div
        style={
          Object {
            "position": "relative",
            "width": "220px",
          }
        }
      >
        <div
          className="slds-pill_container"
        >
          <span
            className="slds-pill slds-pill_link"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
          >
            <a
              className="slds-pill__action"
              href="#"
              onClick={[Function]}
              title="Pill label that is longer than the area that contains it"
            >
              <span
                className="slds-pill__label"
              >
                Pill label that is longer than the area that contains it
              </span>
            </a>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon_x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Remove
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
